--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <h3 class="title">Titolo Videogame</h3>
                 <p class="text">testo random</p>
             </div> -->
+            <div id="thumbnails">
+                
+            </div>
             <div class="">
                 <button class="next">next</button>
                 <button class="previous">Previe</button>
