--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
                 <p class="text">testo random</p>
             </div> -->
             <div id="thumbnails">
-                
+
             </div>
             <div class="">
+                <button class="autoPlay">AutoPlay</button>
                 <button class="next">next</button>
                 <button class="previous">Previe</button>
             </div>
